<resources>
    <string name="action_settings">Settings</string>

    <string name="app_name">商户版APP-v2.0</string>
    <string name="protocal_text"><u>用户协议</u></string>
    <string name="copyright_text">Copyright © 2015年 wushuu. All rights reserved.</string>


    <!--login Activity -->
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="save_pwd">保存密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="login">登录</string>
    <string name="title_activity_welcome">WelcomeActivity</string>



    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">释放刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载</string>
</resources>
