<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/layout_login_circle_react_shape"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:padding="3dp"
            android:src="@mipmap/user_name" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:background="#cccccc" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_login_input_dialog_bg"
            android:hint="@string/input_username"
            android:padding="10dp"
            android:textSize="18sp"
            android:text="wushuu"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/layout_login_circle_react_shape"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:padding="3dp"
            android:src="@mipmap/password" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:background="#cccccc" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_login_input_dialog_bg"
            android:hint="@string/input_password"
            android:padding="10dp"
            android:textSize="18sp"
            android:text="12345678"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"

        >

        <CheckBox
            style="@style/MyCheckBoxStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:checked="false"
            android:text="@string/save_pwd"
            android:textSize="16sp"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/forget_pwd"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/layout_login_button_shape"
        />

    <include layout="@layout/layout_footer" />
</LinearLayout>